--- a/tests/cassettes/test_shipment_one_call_buy_with_carbon_offset.yaml
+++ b/tests/cassettes/test_shipment_one_call_buy_with_carbon_offset.yaml
@@ -7,7 +7,7 @@ interactions:
       "city": "San Francisco", "state": "CA", "zip": "94104", "country": "US", "phone":
       "4153334445", "email": "support@easypost.com"}, "parcel": {"length": "20.2",
       "width": "10.9", "height": "5", "weight": "65.9"}, "service": "Priority", "carrier_accounts":
-      ["ca_b25657e9896e4d63ac8151ac346ac41e"], "carrier": "USPS"}, "carbon_offset":
+      "ca_b25657e9896e4d63ac8151ac346ac41e", "carrier": "USPS"}, "carbon_offset":
       true}'
     headers:
       Accept:
@@ -17,7 +17,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '653'
+      - '651'
       Content-Type:
       - application/json
       authorization:
@@ -28,68 +28,68 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at": "2022-07-28T19:56:28Z", "is_return": false, "messages":
+      string: '{"created_at": "2022-07-29T21:58:04Z", "is_return": false, "messages":
         [], "mode": "test", "options": {"currency": "USD", "payment": {"type": "SENDER"},
         "date_advance": 0}, "reference": null, "status": "unknown", "tracking_code":
-        "9405500109361130483644", "updated_at": "2022-07-28T19:56:29Z", "batch_id":
+        "9405500109361130689039", "updated_at": "2022-07-29T21:58:05Z", "batch_id":
         null, "batch_status": null, "batch_message": null, "customs_info": null, "from_address":
-        {"id": "adr_5e3bd3bc0eaf11eda95cac1f6b0a0d1e", "object": "Address", "created_at":
-        "2022-07-28T19:56:28+00:00", "updated_at": "2022-07-28T19:56:28+00:00", "name":
+        {"id": "adr_856412210f8911edb33cac1f6bc72124", "object": "Address", "created_at":
+        "2022-07-29T21:58:04+00:00", "updated_at": "2022-07-29T21:58:04+00:00", "name":
         "EasyPost", "company": null, "street1": "417 Montgomery Street", "street2":
         "5th Floor", "city": "San Francisco", "state": "CA", "zip": "94104", "country":
         "US", "phone": "4153334445", "email": "support@easypost.com", "mode": "test",
         "carrier_facility": null, "residential": null, "federal_tax_id": null, "state_tax_id":
         null, "verifications": {}}, "insurance": null, "order_id": null, "parcel":
-        {"id": "prcl_0ca15717d74b407c9299e1c1a9cae5d4", "object": "Parcel", "created_at":
-        "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:28Z", "length": 20.2,
+        {"id": "prcl_56d5c42248bf4b849b8fe42f1eafca38", "object": "Parcel", "created_at":
+        "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:04Z", "length": 20.2,
         "width": 10.9, "height": 5.0, "predefined_package": null, "weight": 65.9,
-        "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_a61e97eac5944ec98377b7d30987d809",
-        "created_at": "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:29Z",
-        "date_advance": 0, "integrated_form": "none", "label_date": "2022-07-28T19:56:28Z",
+        "mode": "test"}, "postage_label": {"object": "PostageLabel", "id": "pl_4eccf7b8bfb34d51a6068c4ed3b9a0c0",
+        "created_at": "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:05Z",
+        "date_advance": 0, "integrated_form": "none", "label_date": "2022-07-29T21:58:04Z",
         "label_resolution": 300, "label_size": "4x6", "label_type": "default", "label_file_type":
-        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220728/97cedb179d3a464f9a56541be3d3f9ea.png",
+        "image/png", "label_url": "https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220729/d5b8e4a06d0a418ba52a3517ac3f7a1b.png",
         "label_pdf_url": null, "label_zpl_url": null, "label_epl2_url": null, "label_file":
-        null}, "rates": [{"id": "rate_737f5318c0cf42c7992e4461e273c001", "object":
-        "Rate", "created_at": "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:28Z",
-        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
-        "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
-        "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        5, "shipment_id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_f72e4e510a1e405bb2e61dc5daff2a9d",
-        "object": "Rate", "created_at": "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:28Z",
-        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
-        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
-        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
-        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_e56795c2d4fc4e3d8227cf8a8a7970ac",
-        "object": "Rate", "created_at": "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:28Z",
+        null}, "rates": [{"id": "rate_e316cfa35bf946b3a5624488897cab73", "object":
+        "Rate", "created_at": "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:04Z",
         "mode": "test", "service": "Express", "carrier": "USPS", "rate": "44.30",
         "currency": "USD", "retail_rate": "51.00", "retail_currency": "USD", "list_rate":
         "44.30", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         null, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        null, "shipment_id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "carrier_account_id":
+        null, "shipment_id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "carrier_account_id":
         "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
-        "grams": 154, "price": "0.11", "currency": "USD"}}], "refund_status": null,
-        "scan_form": null, "selected_rate": {"id": "rate_f72e4e510a1e405bb2e61dc5daff2a9d",
-        "object": "Rate", "created_at": "2022-07-28T19:56:28Z", "updated_at": "2022-07-28T19:56:28Z",
+        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_9bc875172eda4d5ab4da1ead63f4cd9e",
+        "object": "Rate", "created_at": "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:04Z",
         "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
         "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
         "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
         2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
-        2, "shipment_id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "carrier_account_id":
-        "ca_b25657e9896e4d63ac8151ac346ac41e"}, "tracker": {"id": "trk_ffe12cac5ad74d3ca1b14ac302e8a2c0",
-        "object": "Tracker", "mode": "test", "tracking_code": "9405500109361130483644",
-        "status": "unknown", "status_detail": "unknown", "created_at": "2022-07-28T19:56:29Z",
-        "updated_at": "2022-07-28T19:56:29Z", "signed_by": null, "weight": null, "est_delivery_date":
-        null, "shipment_id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "carrier": "USPS",
+        2, "shipment_id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
+        "grams": 154, "price": "0.11", "currency": "USD"}}, {"id": "rate_db2f8e117335413fac5e35c6d87c0b74",
+        "object": "Rate", "created_at": "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:04Z",
+        "mode": "test", "service": "ParcelSelect", "carrier": "USPS", "rate": "8.91",
+        "currency": "USD", "retail_rate": "8.91", "retail_currency": "USD", "list_rate":
+        "8.91", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        5, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        5, "shipment_id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e", "carbon_offset": {"object": "CarbonOffset",
+        "grams": 154, "price": "0.11", "currency": "USD"}}], "refund_status": null,
+        "scan_form": null, "selected_rate": {"id": "rate_9bc875172eda4d5ab4da1ead63f4cd9e",
+        "object": "Rate", "created_at": "2022-07-29T21:58:04Z", "updated_at": "2022-07-29T21:58:04Z",
+        "mode": "test", "service": "Priority", "carrier": "USPS", "rate": "9.82",
+        "currency": "USD", "retail_rate": "13.15", "retail_currency": "USD", "list_rate":
+        "9.82", "list_currency": "USD", "billing_type": "easypost", "delivery_days":
+        2, "delivery_date": null, "delivery_date_guaranteed": false, "est_delivery_days":
+        2, "shipment_id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "carrier_account_id":
+        "ca_b25657e9896e4d63ac8151ac346ac41e"}, "tracker": {"id": "trk_64c6d709bc8546d3a26d3508ff9aeb85",
+        "object": "Tracker", "mode": "test", "tracking_code": "9405500109361130689039",
+        "status": "unknown", "status_detail": "unknown", "created_at": "2022-07-29T21:58:05Z",
+        "updated_at": "2022-07-29T21:58:05Z", "signed_by": null, "weight": null, "est_delivery_date":
+        null, "shipment_id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "carrier": "USPS",
         "tracking_details": [], "fees": [], "carrier_detail": null, "public_url":
-        "https://track.easypost.com/djE6dHJrX2ZmZTEyY2FjNWFkNzRkM2NhMWIxNGFjMzAyZThhMmMw"},
-        "to_address": {"id": "adr_5e39a11f0eaf11eda95bac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-07-28T19:56:28+00:00", "updated_at": "2022-07-28T19:56:28+00:00",
+        "https://track.easypost.com/djE6dHJrXzY0YzZkNzA5YmM4NTQ2ZDNhMjZkMzUwOGZmOWFlYjg1"},
+        "to_address": {"id": "adr_8561e6b30f8911ed8596ac1f6bc7b362", "object": "Address",
+        "created_at": "2022-07-29T21:58:04+00:00", "updated_at": "2022-07-29T21:58:04+00:00",
         "name": "DR. STEVE BRULE", "company": null, "street1": "179 N HARBOR DR",
         "street2": null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506",
         "country": "US", "phone": "8573875756", "email": "DR_STEVE_BRULE@GMAIL.COM",
@@ -97,15 +97,15 @@ interactions:
         null, "state_tax_id": null, "verifications": {"zip4": {"success": true, "errors":
         [], "details": null}, "delivery": {"success": true, "errors": [], "details":
         {"latitude": 33.8436, "longitude": -118.39177, "time_zone": "America/Los_Angeles"}}}},
-        "usps_zone": 4, "return_address": {"id": "adr_5e3bd3bc0eaf11eda95cac1f6b0a0d1e",
-        "object": "Address", "created_at": "2022-07-28T19:56:28+00:00", "updated_at":
-        "2022-07-28T19:56:28+00:00", "name": "EasyPost", "company": null, "street1":
+        "usps_zone": 4, "return_address": {"id": "adr_856412210f8911edb33cac1f6bc72124",
+        "object": "Address", "created_at": "2022-07-29T21:58:04+00:00", "updated_at":
+        "2022-07-29T21:58:04+00:00", "name": "EasyPost", "company": null, "street1":
         "417 Montgomery Street", "street2": "5th Floor", "city": "San Francisco",
         "state": "CA", "zip": "94104", "country": "US", "phone": "4153334445", "email":
         "support@easypost.com", "mode": "test", "carrier_facility": null, "residential":
         null, "federal_tax_id": null, "state_tax_id": null, "verifications": {}},
-        "buyer_address": {"id": "adr_5e39a11f0eaf11eda95bac1f6b0a0d1e", "object":
-        "Address", "created_at": "2022-07-28T19:56:28+00:00", "updated_at": "2022-07-28T19:56:28+00:00",
+        "buyer_address": {"id": "adr_8561e6b30f8911ed8596ac1f6bc7b362", "object":
+        "Address", "created_at": "2022-07-29T21:58:04+00:00", "updated_at": "2022-07-29T21:58:04+00:00",
         "name": "DR. STEVE BRULE", "company": null, "street1": "179 N HARBOR DR",
         "street2": null, "city": "REDONDO BEACH", "state": "CA", "zip": "90277-2506",
         "country": "US", "phone": "8573875756", "email": "DR_STEVE_BRULE@GMAIL.COM",
@@ -117,7 +117,7 @@ interactions:
         "charged": true, "refunded": false}, {"object": "Fee", "type": "PostageFee",
         "amount": "9.82000", "charged": true, "refunded": false}, {"object": "Fee",
         "type": "CarbonOffsetFee", "amount": "0.11000", "charged": true, "refunded":
-        false}], "id": "shp_bbb1e7fda63845a7a695855e4be3ded7", "object": "Shipment"}'
+        false}], "id": "shp_9ff69e74cb7942b8bb3de657fef36fdb", "object": "Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -126,11 +126,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"7510d7f0ed7bfa19825c3b4907072bfb"
+      - W/"4e3b47e2abeff4f6bf7280ee135ca47f"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_bbb1e7fda63845a7a695855e4be3ded7
+      - /api/v2/shipments/shp_9ff69e74cb7942b8bb3de657fef36fdb
       pragma:
       - no-cache
       referrer-policy:
@@ -146,7 +146,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3843703f62e2e9ebff23e2dc0034381d
+      - 3b422b0062e457ece788d9050010e405
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -154,13 +154,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 403f17ff97
-      - intlb2wdc 403f17ff97
-      - extlb4wdc 403f17ff97
+      - intlb2nuq 403f17ff97
+      - extlb1nuq 403f17ff97
       x-runtime:
-      - '1.260083'
+      - '1.220486'
       x-version-label:
-      - easypost-202207272329-7f74c9e58c-master
+      - easypost-202207291722-ecd5579616-master
       x-xss-protection:
       - 1; mode=block
     status:
